Fixed bottom of the page spacing

--- a/style.css
+++ b/style.css
@@ -147,6 +147,6 @@
     font-size: 16px;
     text-align: center;
     display: block;
-    margin: 0 0 0 0;
+    margin-bottom: 60px;
   }
   
